# Binary_Data_Log

./: .gitignore  CMakeLists.txt  README.md  run.sh
example/: imu_data.csv  test_data.csv
src/: CMakeLists.txt  binary_data_log.cpp  binary_data_log.h  binary_data_log_basic_type.h  binary_data_log_csv_loader.cpp  binary_data_log_decoder.cpp  binary_data_log_file_protocal.h  binary_data_log_recorder.cpp  binary_data_log_recorder_dynamic.cpp  binary_data_log_recorder_image.cpp  binary_data_log_recorder_static.cpp  hex_data_log.h  hex_data_log_file_protocal.h
test/: test_binary_data_log.cpp  test_csv_file_to_binlog.cpp  test_hex_data_log.cpp
